--- a/POSApp/POSApp.csproj
+++ b/POSApp/POSApp.csproj
@@ -173,6 +173,7 @@
     <Content Include="Images\EditIcon.png" />
     <Content Include="Images\FoodImage.jpg" />
     <Content Include="Images\HistoryIcon.png" />
+    <Content Include="Images\HomeIcon.png" />
     <Content Include="Images\InventoryIcon.png" />
     <Content Include="Images\LogoIcon.png" />
     <Content Include="Images\ManageIcon.png" />
@@ -223,10 +224,6 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Foods\Index.cshtml" />
-    <Content Include="Views\Inventories\Create.cshtml" />
-    <Content Include="Views\Inventories\Delete.cshtml" />
-    <Content Include="Views\Inventories\Details.cshtml" />
-    <Content Include="Views\Inventories\Edit.cshtml" />
     <Content Include="Views\Inventories\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
